# turkey-rice-classification

./: .gitignore  README.md  classification.ipynb  pyproject.toml
