[tool.poetry]
name = "turkey-rice-classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
numpy = "^1.22.0"
tensorflow = "^2.11.0"
matplotlib = "^3.5.0"
scikit-learn = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
